# cmake-stm8-sdcc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
